--- a/app/views/layouts/account.html.haml
+++ b/app/views/layouts/account.html.haml
@@ -27,7 +27,7 @@
           .col-md-5
             .article-text
               = image_tag "check.png", width: 70, class: "img-responsive"
-              %h1 Personalized your surveys
+              %h1= t "account.header_title"
               %p
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam molestie erat
                 nisi, quis tincidunt leo faucibus eget.
