--- a/app/views/admin/customers/_form.html.haml
+++ b/app/views/admin/customers/_form.html.haml
@@ -1,4 +1,5 @@
 = simple_form_for [:admin, current_user, @customer] do |f|
-  = f.input :name, label: false, placeholder: "Name"
-  = f.input :description, label: false, input_html: { rows: 4 }, placeholder: "Description"
-  = f.button :submit, "Submit customer", class: "btn-block btn-default"
+  = f.input :name, label: false, placeholder: Customer.human_attribute_name(:name)
+  = f.input :description, label: false, input_html: { rows: 4 },
+    placeholder: Customer.human_attribute_name(:description)
+  = f.button :submit, t("app.customer.form_button"), class: "btn-block btn-default"
