--- a/app/views/admin/customers/edit.html.haml
+++ b/app/views/admin/customers/edit.html.haml
@@ -1,17 +1,18 @@
 - content_for :sub_nav do
   .col-md-5
-    %h1 Update the following information
+    %h1= t "app.customer.edit.text_primary"
   .col-md-3
     %ul.list-inline
       %li
-        = link_to "All CUSTOMERS", customers_path
+        = link_to t("app.customer.index.links.customer_all"), customers_path
       - if is_admin?
         %li
-          = link_to "NEW CUSTOMER", [:new, :admin, current_user, :customer]
+          = link_to t("app.customer.index.links.customer_new"),
+            [:new, :admin, current_user, :customer]
 .container
   .row
     .col-md-8.col-md-offset-2
       .default-panel
         %h3
-          Edit #{@customer.name} information
+          = t "app.customer.edit.text_secondary"
         = render "form"
