--- a/app/views/admin/users/edit.html.haml
+++ b/app/views/admin/users/edit.html.haml
@@ -1,16 +1,16 @@
 - content_for :sub_nav do
-  .col-md-6
-    %h1 Update the following information
-  .col-md-2
+  .col-md-5
+    %h1= t "app.user.admin_edit.subnav"
+  .col-md-3
     %ul.list-inline
       %li
-        = link_to "All USERS", [:admin, :users]
+        = link_to t("app.user.index.links.user_all"), [:admin, :users]
       %li
-        = link_to "NEW USER", [:new, :admin, :user]
+        = link_to t("app.user.index.links.user_new"), [:new, :admin, :user]
 .container
   .row
     .col-md-8.col-md-offset-2
       .default-panel
         %h3
-          Edit #{@user} information
+          = t "app.user.admin_edit.text_primary"
         = render "form", user: @user, customers: @customers
