--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -1,13 +1,13 @@
 - content_for :sub_nav do
-  .col-md-6
-    %h1 Manage the following users
-  .col-md-2
+  .col-md-5
+    %h1= t "app.user.index.links.subnav"
+  .col-md-3
     %ul.list-inline
       - if is_admin?
         %li
-          = link_to "All USERS", [:admin, :users]
+          = link_to t("app.user.index.links.user_all"), [:admin, :users]
         %li
-          = link_to "NEW USER", [:new, :admin, :user]
+          = link_to t("app.user.index.links.user_new"), [:new, :admin, :user]
 
 .container
   - @users.each_slice(2) do |(b1, b2)|
