--- a/app/views/answers/fields/_answer_email.html.haml
+++ b/app/views/answers/fields/_answer_email.html.haml
@@ -1,2 +1,2 @@
 = f.simple_fields_for :answer_open do |builder|
-  = builder.input :response, label: false, as: :email, placeholder: "Email address"
+  = builder.input :response, label: false, as: :email, placeholder: t("app.answer.email")
