--- a/app/views/answers/fields/_answer_phone.html.haml
+++ b/app/views/answers/fields/_answer_phone.html.haml
@@ -1,2 +1,2 @@
 = f.simple_fields_for :answer_open do |builder|
-  = builder.input :response, label: false, as: :tel, placeholder: "Phone number"
+  = builder.input :response, label: false, as: :tel, placeholder: t("app.answer.phone")
