--- a/app/views/customers/index.html.haml
+++ b/app/views/customers/index.html.haml
@@ -1,13 +1,14 @@
 - content_for :sub_nav do
   .col-md-5
-    %h1 Manage the following customers
+    %h1= t "app.customer.index.links.subnav"
   .col-md-3
     %ul.list-inline
       %li
-        = link_to "All CUSTOMERS", customers_path
+        = link_to t("app.customer.index.links.customer_all"), customers_path
       - if is_admin?
         %li
-          = link_to "NEW CUSTOMER", [:new, :admin, current_user, :customer]
+          = link_to t("app.customer.index.links.customer_new"),
+            [:new, :admin, current_user, :customer]
 .container
   - @customers.each_slice(2) do |(b1, b2)|
     .row
