--- a/app/views/surveys/_informative_fields.html.haml
+++ b/app/views/surveys/_informative_fields.html.haml
@@ -1,4 +1,4 @@
-= f.input :info_body, label: false, placeholder: "Informative text"
+= f.input :info_body, label: false, placeholder: Question.human_attribute_name(:info_body)
 .image-fields#info-img
   .media
     .media-left
@@ -8,15 +8,15 @@
         .img-preview{style: "background-image: url(#{asset_path('default_avatar.png')})"}
     .media-body
       .file-upload.btn.btn-primary.btn-xs
-        %span Upload an image
+        %span= t "app.question.info.image_upload"
         = f.file_field :info_image, label: false, class: "upload"
         = f.input :info_image_cache, as: :hidden
 
       - if f.object.info_image?
         = f.hidden_field :remove_info_image
         = link_to fa_icon("trash-o"), "#", data: { behavior: "remove_image_fields" },
-          class: "pull-right", title: "Remove this image"
+          class: "pull-right", title: t("app.question.info.image_remove")
 
-      %p Images should be around 300x300 for a better size
+      %p= t "app.question.info.image_text"
       = f.error :info_image
 
