--- a/app/views/surveys/edit.html.haml
+++ b/app/views/surveys/edit.html.haml
@@ -1,21 +1,20 @@
 - content_for :sub_nav do
-  .col-md-5
-    %h1 #{@survey.name} - edition
-  .col-md-3
+  .col-md-4
+    %h1= t "app.survey.edit.subnav"
+  .col-md-4
     %ul.list-inline
       - if policy(Survey.new(customer: @customer)).create?
         %li
-          = link_to "CREATE NEW SURVEY", [:new, @customer, :survey],
+          = link_to t("app.survey.index.links.survey_new"), [:new, @customer, :survey],
             class: "btn btn-sm btn-default"
       - if policy(@survey).show?
         %li
-          = link_to "SURVEY REPORT",
-            [@survey.customer, @survey],
+          = link_to t("app.survey.edit.survey_report"), [@survey.customer, @survey],
             class: "btn btn-sm btn-primary"
 .container
   .row
     .col-md-8.col-md-offset-2
       .default-panel
         %h3
-          Complete the following fields to edit this survey
+          = t "app.survey.edit.text_primary"
         = render "form"
