--- a/app/views/surveys/index.html.haml
+++ b/app/views/surveys/index.html.haml
@@ -1,14 +1,14 @@
 - content_for :sub_nav do
   .col-md-5
-    %h1 #{@customer.name} surveys
+    %h1= t("app.survey.index.links.subnav")
   .col-md-3
     %ul.list-inline
       - if policy(Survey.new(customer: @customer)).create?
         %li
-          = link_to "CREATE NEW SURVEY", [:new, @customer, :survey],
-            class: "btn btn-sm btn-default"
+          = link_to t("app.survey.index.links.survey_new"),
+            [:new, @customer, :survey], class: "btn btn-sm btn-default"
       %li
-        = link_to "#{@customer.surveys_count} surveys total", [@customer, :surveys]
+        = link_to "#{@customer.surveys_count} #{Survey.human_attribute_name(:class_name).downcase} total",[@customer, :surveys]
 
 .container
   - @surveys.each_slice(2) do |(b1, b2)|
