--- a/app/views/surveys/show.html.haml
+++ b/app/views/surveys/show.html.haml
@@ -1,13 +1,13 @@
 - content_for :sub_nav do
   .col-md-5
-    %h1 Survey report and statistics
+    %h1= t "app.survey.show.subnav"
   .col-md-3
     %ul.list-inline
       %li
-        = link_to "SUBMIT THIS SURVEY", [:new, @survey, :submission],
+        = link_to t("app.survey.show.survey_submit"), [:new, @survey, :submission],
           class: "btn btn-sm btn-primary"
       %li
-        = link_to "#{@customer.surveys_count} surveys total", [@customer, :surveys]
+        = link_to "#{@customer.surveys_count} #{Survey.human_attribute_name(:class_name).downcase} total", [@customer, :surveys]
 
 .container
   .row
@@ -19,52 +19,55 @@
             = fa_icon "chevron-down"
           %ul.dropdown-menu
             %li
-              = link_to "Submit this survey", [:new, @survey, :submission]
+              = link_to t("app.survey.show.links.survey_submit"), [:new, @survey, :submission]
             %li
-              = link_to "Surveys list", [@survey.customer, :surveys]
+              = link_to t("app.survey.show.links.survey_list"), [@survey.customer, :surveys]
             - if policy(@survey).update?
               %li
-                = link_to "Edit survey", [:edit, @customer, @survey]
+                = link_to t("app.survey.show.links.survey_edit"), [:edit, @customer, @survey]
             %li
-              = link_to "Generate PDF", customer_survey_path(@customer, @survey, format: :pdf)
+              = link_to t("app.survey.show.links.survey_pdf"),
+                customer_survey_path(@customer, @survey, format: :pdf)
             - if policy(@survey).archive?
               %li
-                = link_to "Archive survey", [:archive, @survey.customer, @survey],
-                  method: :patch,
-                  data: { confirm: "Are you sure you want to archive this survey?" }
+                = link_to t("app.survey.index.links.survey_archive"),
+                  [:archive, @survey.customer, @survey], method: :patch,
+                  data: { confirm: t("app.survey.index.links.archive_alert") }
 
         %h1
           = @survey.name
           %small
-            = @survey.created_at.strftime("Created on %m/%d/%Y at %I:%M%p")
+            = t "date.created_at"
+            = I18n.l @survey.created_at, format: :custom
         %p
           = @survey.description
 
         %h2
-          Statistics
+          = t "app.survey.show.text_primary"
 
         %ul.list-group.m-t-1.m-b-0
           %li.list-group-item
             %span.counter.pull-right
               = @survey.questions_count
-            Questions
+            = Question.human_attribute_name(:class_name).pluralize
           %li.list-group-item
             .clearfix
-              = link_to "#{@survey.submissions.size} Submissions",
+              = link_to "#{@survey.submissions.size} #{t("app.survey.show.survey_submissions")}",
                 [@survey, :submissions], remote: true, class: "pull-left"
               .export-links
-                = link_to "Export CSV", survey_submissions_path(@survey, format: "csv"),
+                = link_to t("app.survey.show.survey_export"),
+                  survey_submissions_path(@survey, format: "csv"),
                   class: "btn btn-xs btn-primary"
 
         .row
           .col-md-4
             %h3
-              Type of questions
+              = t "app.survey.show.type_of_questions"
 
             %ol.ordered-list
               - @survey.questions.each do |question|
                 %li
-                  = question.question_type.capitalize
+                  = t("app.question.question_types.#{question.question_type}").capitalize
                   - if question.choices.any?
                     %span.badge.pull-right
                       = question.choices.size
@@ -74,8 +77,10 @@
 
           .col-md-8
             %h3.text-center
-              Results by type
-              = pie_chart @survey.questions.unscope(:order).group_types
+              = t "app.survey.show.results_by_type"
+              - @trans_keys = @survey.questions.unscope(:order).group_types.transform_keys do |key|
+                - t("app.question.question_types.#{key}").capitalize
+              = pie_chart @trans_keys
 
         = render @survey.questions
 
