--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,10 +1,10 @@
 - content_for :sub_nav do
   .col-md-6
-    %h1 #{current_user} - personal details
+    %h1 #{current_user} - #{t("app.user.show.details")}
 .container
   .row
     .col-md-8.col-md-offset-2
       .default-panel
         %h3
-          Edit your information
+          = t "app.user.show.text_primary"
         = render "form"
