--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,3 +1,3 @@
-%h1.text-center Create a new account!
-%p.text-center.text-light Fill the following fields and start managing surveys!
+%h1.text-center= t "app.user.new.text_primary"
+%p.text-center.text-light= t "app.user.new.text_secondary"
 = render "form_account"
