--- a/app/assets/stylesheets/account.scss
+++ b/app/assets/stylesheets/account.scss
@@ -99,6 +99,11 @@ section {
   margin-left: 0px !important;
 }
 
+.navbar-nav > li > a {
+  padding-top: 31px;
+  padding-bottom: 32px;
+}
+
 .link-default {
   color: #f72969;
 }
